--- a/main.css
+++ b/main.css
@@ -124,6 +124,7 @@ body
 {
     text-decoration: none;
     font-weight: 300;
+    color: #000;
 }
 
 .contact-info.education li
@@ -168,7 +169,7 @@ body
     top: 0;
     left: 0;
     height: 100%;
-    background: #03a9f4;
+    background: #a8aaab;
 }
 
 .contact-info.lang .text
